# image-tiff

./: .gitignore  .travis.yml  CHANGES.md  Cargo.lock.msrv  Cargo.toml  Fibonacci Series  README.md  total prize money
.github/workflows/: fuzz.yml  rust.yml
benches/: decode.rs  encode.rs  lzw.rs
examples/: README.md  async_http.rs  decode.rs  lenient_decode.rs  multithread_http.rs  print-exif.rs  profile_decode.rs  tiff-ls.rs
examples/group_4/: .gitignore  Cargo.toml
examples/group_4/data/: patent-drawing.tif
examples/group_4/src/: main.rs
fuzz/: Cargo.toml  tiff.dict
fuzz/fuzz_targets/: decode_comprehensive.rs  decode_image.rs
src/: bytecast.rs  directory.rs  error.rs  ifd.rs  lib.rs  tags.rs  tiff_kind.rs
src/decoder/: buffer.rs  cycles.rs  decoded_entry.rs  ifd.rs  image.rs  logluv.rs  mod.rs  predictor.rs  stream.rs  tag_iter.rs  tag_reader.rs  value.rs
src/decoder/async_decoder/: ifd.rs  image.rs  mod.rs  readme.md  stream.rs  tag_reader.rs
src/decoder/multithread_decoder/: mod.rs
src/decoder_async/: ifd.rs  image.rs  mod.rs  stream.rs  tag_reader.rs
src/encoder/: colortype.rs  directory_encoder.rs  mod.rs  tag_filter.rs  tiff_value.rs  writer.rs
src/encoder/compression/: deflate.rs  lzw.rs  mod.rs  packbits.rs  uncompressed.rs
src/geo/: geo_key.rs  mod.rs
tests/: COPYRIGHT  decode_bigtiff_images.rs  decode_fp16_images.rs  decode_geotiff_images.rs  decode_images.rs  decode_images_async.rs  decode_libtiffpic.rs  decode_planes.rs  encode_images.rs  encode_images_with_compression.rs  fuzz_tests.rs  gen_seq_images.py  gen_seq_tiff.c  lzw_missing_eoi.rs  metadata.rs  predict.rs  subsubifds.rs  subsubifds.tif  verify_seq_tiff.c
tests/fuzz_images/divide_by_zero/: id:000003,sig:06,src:000297,op:havoc,rep:16  id:000004,sig:06,src:000297,op:havoc,rep:8  id:000008,sig:06,src:000324,op:havoc,rep:8  id:000013,sig:06,src:000232,op:havoc,rep:2  id:000017,sig:06,src:000044+000234,op:splice,rep:2  id:000019,sig:06,src:000346+000147,op:splice,rep:4  id:000022,sig:06,src:000036+000170,op:splice,rep:8  id:000024,sig:06,src:000183+000196,op:splice,rep:2  id:000032,sig:06,src:000172,op:havoc,rep:2  id:000033,sig:06,src:000227+000161,op:splice,rep:4  id:000036,sig:06,src:000301,op:havoc,rep:2  id:000038,sig:06,src:000036,op:havoc,rep:2  id:000040,sig:06,src:000112+000100,op:splice,rep:4  id:000042,sig:06,src:000036,op:havoc,rep:4  id:000043,sig:06,src:000286,op:havoc,rep:2  (+34 more)
tests/geotiff/: geo-5b.tif  usda_naip_256_webp_z3.tif
tests/images/: 12bit.cropped.rgb.tiff  12bit.cropped.tiff  big_g4.tif  cmyk-3c-16b.tiff  cmyk-3c-32b-float.tiff  cmyk-3c-8b.tiff  cmyk-4c-8b.tiff  exif.out  exif.tif  extra_bits_gray_8b.tiff  extra_bits_rgb_8b.tiff  fax4-fillorder-lsb.tiff  fax4-rowsperstrip-oversize.tiff  fax4.tiff  gradient-1c-32b-float.tiff  gradient-1c-32b.tiff  gradient-1c-64b-float.tiff  gradient-1c-64b.tiff  gradient-3c-32b-float.tiff  gradient-3c-32b.tiff  gradient-3c-64b.tiff  hpredict-1c-12b.tiff  imagemagick_group4.tiff  int16.tif  int16_rgb.tif  int16_zstd.tif  int8.tif  int8_rgb.tif  issue_69_lzw.tiff  issue_69_packbits.tiff  minisblack-1c-3b.tiff  minisblack-1c-5b.tiff  minisblack-1c-7b.tiff  minisblack-1c-i16b.tiff  minisblack-1c-i8b.tiff  miniswhite-1c-12b.tiff  miniswhite-1c-3b.tiff  miniswhite-1c-6b.tiff  predictor-3-gray-f32.tif  predictor-3-rgb-f32.tif  (+58 more)
(+135 files in other folders)
