[package]
name = "tiff"
version = "0.9.1"
edition = "2021"
resolver = "2"

# note: when changed, also update test runner in `.github/workflows/rust.yml`
rust-version = "1.74.0"

license = "MIT"
description = "TIFF decoding and encoding library in pure Rust"
authors = ["The image-rs Developers"]

repository = "https://github.com/image-rs/image-tiff"
categories = ["multimedia::images", "multimedia::encoding"]

exclude = ["tests/images/*", "tests/fuzz_images/*"]

[dependencies]
half = { version = "2.4.1" }
weezl = "0.1.0"
zune-jpeg = "0.4.17"
flate2 = "1.0.20"
zstd = { version = "0.13", optional = true }
quick-error = "2.0.1"

[dev-dependencies]
criterion = "0.3.1"

[features]
zstd = ["dep:zstd"]

[[bench]]
name = "lzw"
harness = false
